[project]
name = "claude-mcp-historical-weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.5.0",
    "anthropic>=0.66.0",
    "ipykernel>=6.30.1",
    "numpy>=2.2.6",
    "openmeteo-requests>=1.7.2",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "vl-convert-python>=1.8.0",
]
